force-app/main/default/objects/Whitespace_Cell__c/Whitespace_Cell__c.object-meta.xml
<CustomObject>
    <description>Keystone object: one row per product family x node. Object-backed white space so the matrix is reportable, filterable and Agentforce-groundable.</description>
    <label>White-Space Cell</label>
    <nameField>
        <displayFormat>WSC-{0000000}</displayFormat>
        <label>Cell ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>White-Space Cells</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>