force-app/main/default/objects/Whitespace_Cell__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <label>Account Plan</label>
    <type>MasterDetail</type>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipName>Whitespace_Cells</relationshipName>
    <relationshipLabel>White-Space Cells</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
</CustomField>