force-app/main/default/objects/Whitespace_Cell__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <label>ARR</label>
    <description>Owned ARR at this node from the multi-source entitlement union (CPQ + Contract + won Opportunity).</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>