force-app/main/default/objects/Whitespace_Cell__c/fields/Continent__c.field-meta.xml
<CustomField>
    <fullName>Continent__c</fullName>
    <description>Macro region (EMEA / North America / APAC / LATAM) of the office node, resolved from
        BillingCountry via RegionMappingService/Country_Region__mdt at generation time. Backs the
        White-Space Matrix's "By Region" view.</description>
    <label>Continent</label>
    <length>40</length>
    <type>Text</type>
</CustomField>