force-app/main/default/objects/Whitespace_Cell__c/fields/Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue__c</fullName>
    <label>Expected Revenue (Headroom)</label>
    <description>Gap-to-benchmark allocated to this gap cell.</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>