force-app/main/default/objects/Whitespace_Cell__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <label>External Key</label>
    <description>Composite key (plan + family + node type + node key) for idempotent upsert by the generation service.</description>
    <type>Text</type>
    <length>180</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>