force-app/main/default/objects/Whitespace_Cell__c/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <label>Next Action</label>
    <description>The play.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>