force-app/main/default/objects/Whitespace_Cell__c/fields/Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Date__c</fullName>
    <label>Next Action Date</label>
    <type>Date</type>
</CustomField>