force-app/main/default/objects/Whitespace_Cell__c/fields/Node_Key__c.field-meta.xml
<CustomField>
    <fullName>Node_Key__c</fullName>
    <label>Node Key</label>
    <description>Stable key of the row (region id, office id, function id).</description>
    <type>Text</type>
    <length>80</length>
</CustomField>