force-app/main/default/objects/Whitespace_Cell__c/fields/Node_Label__c.field-meta.xml
<CustomField>
    <fullName>Node_Label__c</fullName>
    <label>Node Label</label>
    <description>Display label for the matrix row.</description>
    <type>Text</type>
    <length>120</length>
</CustomField>