force-app/main/default/objects/Whitespace_Cell__c/fields/Node_Type__c.field-meta.xml
<CustomField>
    <fullName>Node_Type__c</fullName>
    <label>Node Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Region</fullName><default>true</default><label>Region</label></value>
            <value><fullName>Office_Subsidiary</fullName><default>false</default><label>Office / Subsidiary</label></value>
            <value><fullName>Practice_Function</fullName><default>false</default><label>Practice / Function</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>