force-app/main/default/objects/Whitespace_Cell__c/fields/Office_Account__c.field-meta.xml
<CustomField>
    <fullName>Office_Account__c</fullName>
    <label>Office Account</label>
    <description>The office / subsidiary Account this node represents (a child of the plan's firm via Account.Ultimate_Account__c). Null for non-account nodes such as corporate practice functions.</description>
    <inlineHelpText>Links this matrix node to the real office Account under the firm, so ARR and entitlements can be sourced from CRM.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Whitespace_Cells</relationshipName>
    <relationshipLabel>White-Space Cells</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>