force-app/main/default/objects/Whitespace_Cell__c/fields/OwnerCell__c.field-meta.xml
<CustomField>
    <fullName>OwnerCell__c</fullName>
    <label>Cell Owner</label>
    <description>Cell owner / SDR hunter.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Owned_Whitespace_Cells</relationshipName>
    <relationshipLabel>White-Space Cells (Owned)</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>