force-app/main/default/objects/Whitespace_Cell__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <description>Matrix column (config-driven).</description>
    <type>Lookup</type>
    <referenceTo>Plan_Product_Family__c</referenceTo>
    <relationshipName>Whitespace_Cells</relationshipName>
    <relationshipLabel>White-Space Cells</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>