force-app/main/default/objects/Whitespace_Cell__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <description>For ownership / hunter rules and reporting.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>