force-app/main/default/objects/Whitespace_Cell__c/fields/Seat_Penetration_Pct__c.field-meta.xml
<CustomField>
    <fullName>Seat_Penetration_Pct__c</fullName>
    <label>Seat Penetration %</label>
    <description>Seat penetration at this node where applicable.</description>
    <type>Percent</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>