force-app/main/default/objects/Whitespace_Cell__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <description>Cell state driving matrix colour. Field history enabled for plan-health-over-time.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Owned_Healthy</fullName><default>false</default><label>Owned / Healthy</label></value>
            <value><fullName>In_Renewal</fullName><default>false</default><label>In Renewal</label></value>
            <value><fullName>Win_Back</fullName><default>false</default><label>Win-back</label></value>
            <value><fullName>White_Space</fullName><default>true</default><label>White Space</label></value>
            <value><fullName>Booked</fullName><default>false</default><label>Booked</label></value>
            <value><fullName>Candidate</fullName><default>false</default><label>Candidate</label></value>
            <value><fullName>No_Engagement</fullName><default>false</default><label>No Engagement</label></value>
            <value><fullName>NA</fullName><default>false</default><label>N/A</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>