force-app/main/default/objects/Whitespace_Cell__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Family__c</columns>
    <columns>Node_Label__c</columns>
    <columns>State__c</columns>
    <columns>ARR__c</columns>
    <columns>OwnerCell__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>